A few redundant object creations, spotted by PMD